--- a/SalesWebMVC/Views/Sellers/Index.cshtml
+++ b/SalesWebMVC/Views/Sellers/Index.cshtml
@@ -33,16 +33,16 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Name);
+                    @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Email);
+                    @Html.DisplayFor(modelItem => item.Email)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.BirthDay);
+                    @Html.DisplayFor(modelItem => item.BirthDay)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.BaseSalary);
+                    @Html.DisplayFor(modelItem => item.BaseSalary)
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
